chore: bump version to 1.5.4 and update migration documentation; add collision hit max horizontal speed and swim AI features